--- a/css/styles.css
+++ b/css/styles.css
@@ -4,15 +4,15 @@ img {
     
 }
 h2{
-    color: blueviolet;
+    color: dark green;
     font-family: 'Times New Roman', Times, serif; 
 }
  h1{
-    color: blue;
+    color: red;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
  }
  p{
-    color: brown;
+    color: green;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  }
